test/corpus/basic_arithmetic.txt
==================
Basic arithmetic expressions
==================

a + b
4 / 5

---

(source_file
  (intermediate_expression
    (simple_expression
      (identifier)))
  (intermediate_expression
    (simple_expression
      (mathOperators
        (plus))))
  (intermediate_expression
    (simple_expression
      (identifier)))
  (intermediate_expression
    (simple_expression
      (binary_frac
        (intermediate_expression
          (simple_expression
            (number_symbol)))
        (binaryMidSymbols
          (slash_div))
        (intermediate_expression
          (simple_expression
            (number_symbol)))))))
