test/corpus/big_equal.txt
==================
Big Equal Expressions
==================

==_a^b
-->_c^d
-->
==^1

---

(source_file
  (bigEqual_expr
    (big_equal_symbols
      (long_equal))
    (simple_expression
      (identifier))
    (simple_expression
      (identifier)))
  (bigEqual_expr
    (big_equal_symbols
      (x_right_arrow))
    (simple_expression
      (identifier))
    (simple_expression
      (identifier)))
  (bigEqual_expr
    (big_equal_symbols
      (x_right_arrow)))
  (bigEqual_expr
    (big_equal_symbols
      (long_equal))
    (simple_expression
      (number_symbol))))
