test/corpus/binary_complex.txt
==================
Binary expressions
==================

frac(root(a)(b))(c)
root(frac(a)(b))(n)

---

(source_file
  (intermediate_expression
    (simple_expression
      (binary_expr
        (binarySymbols
          (frac))
        (simple_expression
          (bracket_expr
            (left_bracket
              (lparen))
            (intermediate_expression
              (simple_expression
                (binary_expr
                  (binarySymbols
                    (root))
                  (simple_expression
                    (bracket_expr
                      (left_bracket
                        (lparen))
                      (intermediate_expression
                        (simple_expression
                          (identifier)))
                      (right_bracket
                        (rparen))))
                  (simple_expression
                    (bracket_expr
                      (left_bracket
                        (lparen))
                      (intermediate_expression
                        (simple_expression
                          (identifier)))
                      (right_bracket
                        (rparen)))))))
            (right_bracket
              (rparen))))
        (simple_expression
          (bracket_expr
            (left_bracket
              (lparen))
            (intermediate_expression
              (simple_expression
                (identifier)))
            (right_bracket
              (rparen)))))))
  (intermediate_expression
    (simple_expression
      (binary_expr
        (binarySymbols
          (root))
        (simple_expression
          (bracket_expr
            (left_bracket
              (lparen))
            (intermediate_expression
              (simple_expression
                (binary_expr
                  (binarySymbols
                    (frac))
                  (simple_expression
                    (bracket_expr
                      (left_bracket
                        (lparen))
                      (intermediate_expression
                        (simple_expression
                          (identifier)))
                      (right_bracket
                        (rparen))))
                  (simple_expression
                    (bracket_expr
                      (left_bracket
                        (lparen))
                      (intermediate_expression
                        (simple_expression
                          (identifier)))
                      (right_bracket
                        (rparen)))))))
            (right_bracket
              (rparen))))
        (simple_expression
          (bracket_expr
            (left_bracket
              (lparen))
            (intermediate_expression
              (simple_expression
                (identifier)))
            (right_bracket
              (rparen))))))))
