test/corpus/factorial_prec.txt
==================
Factorial precedence
==================

root(sqrt(n!))(1/x!!)

---

(source_file
  (intermediate_expression
    (simple_expression
      (binary_expr
        (binarySymbols
          (root))
        (simple_expression
          (bracket_expr
            (left_bracket
              (lparen))
            (intermediate_expression
              (simple_expression
                (unary_expr
                  (unarySymbols
                    (sqrt))
                  (simple_expression
                    (bracket_expr
                      (left_bracket
                        (lparen))
                      (intermediate_expression
                        (simple_expression
                          (factorial_expr
                            (simple_expression
                              (identifier))
                            (factorialSymbols
                              (factorial)))))
                      (right_bracket
                        (rparen)))))))
            (right_bracket
              (rparen))))
        (simple_expression
          (bracket_expr
            (left_bracket
              (lparen))
            (intermediate_expression
              (simple_expression
                (binary_frac
                  (intermediate_expression
                    (simple_expression
                      (number_symbol)))
                  (binaryMidSymbols
                    (slash_div))
                  (intermediate_expression
                    (simple_expression
                      (factorial_expr
                        (simple_expression
                          (identifier))
                        (factorialSymbols
                          (double_factorial))))))))
            (right_bracket
              (rparen))))))))
