test/corpus/frac_complex.txt
==================
Fraction expressions
==================

frac(root(a)(b))(c)
root(frac(a)(b))(n)

---

(source_file
  (concatenation
    (intermediate_expression
      (simple_expression
        (binary_expr
          (binarySymbols
            (frac))
          (simple_expression
            (bracket_expr
              (left_bracket)
              (intermediate_expression
                (simple_expression
                  (binary_expr
                    (binarySymbols
                      (root))
                    (simple_expression
                      (bracket_expr
                        (left_bracket)
                        (intermediate_expression
                          (simple_expression
                            (identifier)))
                        (right_bracket)))
                    (simple_expression
                      (bracket_expr
                        (left_bracket)
                        (intermediate_expression
                          (simple_expression
                            (identifier)))
                        (right_bracket))))))
              (right_bracket)))
          (simple_expression
            (bracket_expr
              (left_bracket)
              (intermediate_expression
                (simple_expression
                  (identifier)))
              (right_bracket))))))
    (intermediate_expression
      (simple_expression
        (binary_expr
          (binarySymbols
            (root))
          (simple_expression
            (bracket_expr
              (left_bracket)
              (intermediate_expression
                (simple_expression
                  (binary_expr
                    (binarySymbols
                      (frac))
                    (simple_expression
                      (bracket_expr
                        (left_bracket)
                        (intermediate_expression
                          (simple_expression
                            (identifier)))
                        (right_bracket)))
                    (simple_expression
                      (bracket_expr
                        (left_bracket)
                        (intermediate_expression
                          (simple_expression
                            (identifier)))
                        (right_bracket))))))
              (right_bracket)))
          (simple_expression
            (bracket_expr
              (left_bracket)
              (intermediate_expression
                (simple_expression
                  (identifier)))
              (right_bracket))))))))
