test/corpus/frozen.txt
==================
Frozen expressions
==================

text"Story Book"
text(abcd)
tex"\\infty"
color"red"(abc)
color(blue)(xyz)

---

(source_file
  (simple_expression
    (unaryFrozen_expr
      (unary_frozen_symbols
        (text))
      (literal_string
        (string_fragment))))
  (simple_expression
    (unaryFrozen_expr
      (unary_frozen_symbols
        (text))
      (left_bracket
        (lparen))
      (inner_frozen)
      (right_bracket
        (rparen))))
  (simple_expression
    (unaryFrozen_expr
      (unary_frozen_symbols
        (tex))
      (literal_string
        (escape_sequence)
        (string_fragment))))
  (simple_expression
    (color_expr
      (literal_string
        (string_fragment))
      (simple_expression
        (bracket_expr
          (left_bracket
            (lparen))
          (simple_expression
            (identifier))
          (right_bracket
            (rparen))))))
  (simple_expression
    (color_expr
      (left_bracket
        (lparen))
      (inner_frozen)
      (right_bracket
        (rparen))
      (simple_expression
        (bracket_expr
          (left_bracket
            (lparen))
          (simple_expression
            (identifier))
          (right_bracket
            (rparen)))))))
