test/corpus/matrix_complex.txt
==================
Matrix with supsub
==================

[[a^2,b^3],[c^4,d^5]]

---

(source_file
  (simple_expression
    (matrix_expr
      (left_bracket
        (lbracket))
      (matrix_row_expr
        (left_bracket
          (lbracket))
        (superscript
          (simple_expression
            (identifier))
          (simple_expression
            (number_symbol)))
        (superscript
          (simple_expression
            (identifier))
          (simple_expression
            (number_symbol)))
        (right_bracket
          (rbracket)))
      (matrix_row_expr
        (left_bracket
          (lbracket))
        (superscript
          (simple_expression
            (identifier))
          (simple_expression
            (number_symbol)))
        (superscript
          (simple_expression
            (identifier))
          (simple_expression
            (number_symbol)))
        (right_bracket
          (rbracket)))
      (right_bracket
        (rbracket)))))

==================
Matrix with bar
==================

[[1,2,|,3],[4,5,|,6]]

---

(source_file
  (simple_expression
    (matrix_expr
      (left_bracket
        (lbracket))
      (matrix_row_expr
        (left_bracket
          (lbracket))
        (simple_expression
          (number_symbol))
        (simple_expression
          (number_symbol))
        (simple_expression
          (math_operators
            (vbar)))
        (simple_expression
          (number_symbol))
        (right_bracket
          (rbracket)))
      (matrix_row_expr
        (left_bracket
          (lbracket))
        (simple_expression
          (number_symbol))
        (simple_expression
          (number_symbol))
        (simple_expression
          (math_operators
            (vbar)))
        (simple_expression
          (number_symbol))
        (right_bracket
          (rbracket)))
      (right_bracket
        (rbracket)))))
