test/corpus/multiline_expr.txt
==================
Multiline Expressions
==================

f(x) &= e^x

f'(x) &= e^x

---

(source_file
  (multiline_expr
    (simple_expression
      (identifier))
    (simple_expression
      (bracket_expr
        (left_bracket
          (lparen))
        (simple_expression
          (identifier))
        (right_bracket
          (rparen))))
    (simple_expression
      (mathOperators
        (amp)))
    (simple_expression
      (mathOperators
        (equals)))
    (superscript
      (simple_expression
        (identifier))
      (simple_expression
        (identifier)))
    (multi_linebreak)
    (simple_expression
      (identifier))
    (simple_expression
      (mathOperators
        (prime)))
    (simple_expression
      (bracket_expr
        (left_bracket
          (lparen))
        (simple_expression
          (identifier))
        (right_bracket
          (rparen))))
    (simple_expression
      (mathOperators
        (amp)))
    (simple_expression
      (mathOperators
        (equals)))
    (superscript
      (simple_expression
        (identifier))
      (simple_expression
        (identifier)))))
