test/corpus/simple_expression.txt
==================
Simple number and variable
==================

42
alpha

---

(source_file
  (concatenation
    (intermediate_expression
      (simple_expression
        (number_symbol)))
    (intermediate_expression
      (simple_expression
        (greekLetters
          (alpha))))))
