test/corpus/strings.txt
==================
Literal Strings
==================

"abc"
"def"
"1123\"45"

---

(source_file
  (simple_expression
    (literal_string
      (string_fragment)))
  (simple_expression
    (literal_string
      (string_fragment)))
  (simple_expression
    (literal_string
      (string_fragment)
      (escape_sequence)
      (string_fragment))))
