test/corpus/unary.txt
==================
Unary expressions
==================

sqrt(frac(a)(b))
sqrt(a+b)
cc(N)
---

(source_file
  (concatenation
    (intermediate_expression
      (simple_expression
        (unary_expr
          (unarySymbols
            (sqrt))
          (simple_expression
            (bracket_expr
              (left_bracket)
              (intermediate_expression
                (simple_expression
                  (binary_expr
                    (binarySymbols
                      (frac))
                    (simple_expression
                      (bracket_expr
                        (left_bracket)
                        (intermediate_expression
                          (simple_expression
                            (identifier)))
                        (right_bracket)))
                    (simple_expression
                      (bracket_expr
                        (left_bracket)
                        (intermediate_expression
                          (simple_expression
                            (identifier)))
                        (right_bracket))))))
              (right_bracket))))))
    (concatenation
      (intermediate_expression
        (simple_expression
          (unary_expr
            (unarySymbols
              (sqrt))
            (simple_expression
              (bracket_expr
                (left_bracket)
                (concatenation
                  (intermediate_expression
                    (simple_expression
                      (identifier)))
                  (concatenation
                    (intermediate_expression
                      (simple_expression
                        (mathOperators
                          (plus))))
                    (intermediate_expression
                      (simple_expression
                        (identifier)))))
                (right_bracket))))))
      (intermediate_expression
        (simple_expression
          (unary_expr
            (unarySymbols
              (cc))
            (simple_expression
              (bracket_expr
                (left_bracket)
                (intermediate_expression
                  (simple_expression
                    (identifier)))
                (right_bracket)))))))))
